--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -539,6 +539,21 @@ table.invoice tfoot > tr {
   }
 }
 
+/*
+ * breadcrumb
+ */
+[data-name=breadcrumb] {
+    margin: 0;
+    padding: 0;
+}
+[data-name=breadcrumb] > li + li {
+    margin: 0 0 0 1rem;
+}
+[data-name=breadcrumb] > li + li:before {
+    content: '»';
+    margin: 0 1rem 0 0;
+}
+
 /**
  * markdown
  */
