--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -610,6 +610,70 @@ table.invoice tfoot > tr {
 }
 
 /**
+ * wild area
+ */
+.wild-area {
+  position: relative;
+  overflow: hidden;
+}
+.wild-area > .wild-content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+
+  display: flex;
+  display: -ms-flexbox;
+
+          transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+
+          transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  -webkit-transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+.wild-area > .wild-content.active {
+          transform: translateY(0);
+  -webkit-transform: translateY(0);
+}
+
+.wild-area > .wild-content > span.wild-body > input[type=text] {
+  padding: 0;
+  margin: 0;
+  border-width: 0 !important;
+  box-shadow: none !important;
+  height: auto;
+}
+
+.wild-area ul.wild-menu {
+  margin: 0;
+
+  display: flex;
+  display: -ms-flexbox;
+
+      flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+}
+.wild-area ul.wild-menu > li {
+  border-style: solid;
+  border-color: #f0f0f0;
+  border-width: 0;
+}
+.wild-area ul.wild-menu > li + li {
+  border-width: 0 0 0 1px;
+}
+.wild-area ul.wild-menu > li > a {
+  margin: 0;
+  padding: .6rem 1rem;
+  display: table;
+  color: #666;
+}
+.wild-area ul.wild-menu > li > a:hover {
+  background-color: #f0f0f0;
+}
+
+/**
  * tabs
  */
 .tabs .tab a {
@@ -1015,6 +1079,12 @@ ul.partners > li.partner a {
 ul.partners > li.partner a:hover {
           filter: grayscale(0);
   -webkit-filter: grayscale(0);
+}
+
+@media (max-width: 700px) {
+  ul.partners {
+    display: none;
+  }
 }
 
 /**
