--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1853,18 +1853,16 @@ table tr {
   overflow-y: auto;
   overflow-x: hidden;
   max-height: 300px;
-  margin: 0 0 0 1rem;
   padding: 1rem 2rem;
   background-color: #fff;
-  border-radius: 2rem 0 0 2rem !important;
 }
 .modal .modal-content > .modal-footer {
-  margin: 2rem 0 0;
-  padding: 1rem 2rem;
-  border-radius: 0 2rem 0 0 !important;
+  margin: 1rem 0 0;
+  padding: .5rem 2rem;
   width: auto;
   display: table;
   background-color: #fff;
+  float: right;
 }
 
 .modal.modal-small {
