--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -2335,3 +2335,73 @@ nav.nav-half {
 .rounded-0 {
   border-radius: 0 !important;
 }
+
+/**
+ * plans
+ */
+.plans {
+  width: 100%;
+  margin: 0 0 2rem;
+
+  display: -ms-flexbox;
+  display: flex;
+
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.plans > .plan {
+      flex: 1 1 auto !important;
+  -ms-flex: 1 1 auto !important;
+
+  position: relative;
+
+  margin: 0 2rem;
+  padding: 2rem;
+  border-radius: 2rem;
+
+          transition: all 400ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  -webkit-transition: all 400ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+.plans > .plan:hover,
+.plans > .plan.active {
+  background-color: #fff;
+
+          box-shadow: 0 0 4rem 0 rgba(0, 0, 0, .2);
+  -webkit-box-shadow: 0 0 4rem 0 rgba(0, 0, 0, .2);
+}
+.plans > .plan:before {
+  display: table;
+  content: attr(data-title);
+
+  border-width: 0 0 4px;
+  border-style: solid;
+  border-color: inline;
+
+  margin: 0 0 2rem;
+
+  font-size: 24px;
+}
+.plans > .plan > .price {
+  border-radius: 1rem;
+  margin: 1rem -3rem 0;
+  padding: 1rem;
+}
+.plans > .plan > .price .old {
+  color: #111;
+  font-size: 12px;
+}
+.plans > .plan > .price .new {
+  font-size: 24px;
+  display: table;
+}
+.plans > .plan > .price .new > small,
+.plans > .plan > .price .old > small {
+  display: table;
+  font-size: 12px;
+}
+.plans > .plan > .buy {
+  margin: 2rem 0 0;
+}
