--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -555,6 +555,14 @@ table.invoice tfoot > tr {
 }
 
 /**
+ * code
+ */
+code {
+  padding: .2rem .4rem;
+  border-radius: 1.2rem;
+}
+
+/**
  * markdown
  */
 .markdown > h1,
@@ -1855,8 +1863,9 @@ table tr {
   background-color: #fff;
 }
 .modal .modal-content > .modal-footer {
+  margin: 1px 0 0;
   padding: .5rem 2rem;
-  background-color: rgba(255, 255, 255, .6);
+  background-color: rgba(255, 255, 255, .9);
   height: auto;
 }
 
