--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1837,10 +1837,6 @@ table tr {
   background-color: #fff;
 }
 .modal.with-bg {
-  background-image: url('../img/modal-bg.svg');
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
   background-color: #fff;
 }
 .modal .modal-content {
@@ -1849,7 +1845,6 @@ table tr {
 .modal .modal-content > .modal-title {
   padding: 2rem 2rem 1rem;
   font-size: 18px;
-  color: #fff;
 }
 .modal .modal-content > .modal-title:empty,
 .modal .modal-content > .modal-footer:empty {
@@ -1863,9 +1858,8 @@ table tr {
   background-color: #fff;
 }
 .modal .modal-content > .modal-footer {
-  margin: 1px 0 0;
   padding: .5rem 2rem;
-  background-color: rgba(255, 255, 255, .9);
+  background-color: #fff;
   height: auto;
 }
 
