--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1884,7 +1884,7 @@ table tr {
   background-color: #fff;
 }
 .modal .modal-content > .modal-footer {
-  padding: .5rem 2rem;
+  padding: .5rem 1rem;
   background-color: #fff;
   height: auto;
 }
@@ -2030,6 +2030,29 @@ nav,
     display: inline-block;
     width: 100%;
   }
+}
+
+/**
+ * loading
+ */
+#loading {
+  position: fixed;
+  top: auto;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 99999;
+  padding: 2rem 0;
+  text-align: center;
+
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .6) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .6) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .6) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+}
+#loading .spinner-layer {
+  border-color: rgba(255, 255, 255, .8);
 }
 
 /**
