--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -738,10 +738,10 @@ code {
 }
 
 .card.with-bg {
-  background-image: url('../img/card-bg-2.svg');
+  background-image: url('../img/card-bg.svg');
   background-repeat: no-repeat;
   background-position: top center;
-  background-size: 100% auto;
+  background-size: contain;
 }
 .card.with-bg.bg-soft {
   background-image: url('../img/card-bg-soft.svg');
@@ -1194,14 +1194,8 @@ main {
 /**
  * footer
  */
-footer.page-footer {
-  background-color: #e9e9e9;
-}
 footer.page-footer > .container > .row > .col > img#vz-logo {
   max-width: 128px;
-}
-footer.page-footer .footer-copyright {
-  background-color: rgba(255, 255, 255, .6);
 }
 
 /**
@@ -1541,10 +1535,10 @@ header#main > .parallax-container > .parallax > video#background-video {
   margin-bottom: 8px;
   height: 182px;
 
-  background-image: url('../img/user-bg.svg');
+  background-image: url('../img/card-bg.svg');
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background-position: top center;
+  background-size: contain;
 }
 
 .sidenav .user-view .circle,
@@ -1941,12 +1935,16 @@ ul#slide-out li > .collapsible-header > .material-icons {
 .z-depth-1,
 nav,
 .card-panel,
-.card,
 .toast,
 .dropdown-content,
 .sidenav {
           box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .10), 0 3px 1px -2px rgba(0, 0, 0, .08), 0 1px 5px 0 rgba(0, 0, 0, .1);
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .10), 0 3px 1px -2px rgba(0, 0, 0, .08), 0 1px 5px 0 rgba(0, 0, 0, .1);
+}
+
+.card {
+          box-shadow: 0 8px 8px 0 rgba(0, 0, 0, .10), 0 10px 4px -10px rgba(0, 0, 0, .08), 0 4px 10px 0 rgba(0, 0, 0, .1);
+  -webkit-box-shadow: 0 8px 8px 0 rgba(0, 0, 0, .10), 0 10px 4px -10px rgba(0, 0, 0, .08), 0 4px 10px 0 rgba(0, 0, 0, .1);
 }
 
 /*!
@@ -2091,6 +2089,13 @@ select,
 td,
 th {
   border-radius: 0 !important;
+}
+
+/**
+ * chip
+ */
+.chip {
+  background-color: rgba(200, 200, 200, .4);
 }
 
 /**
