--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1168,6 +1168,14 @@ ul.partners > li.partner a:hover {
 }
 
 /**
+ * container
+ */
+.container.container-wide {
+  width: 90% !important;
+  max-width: 100% !important;
+}
+
+/**
  * more step
  */
 #more-step {
