--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1624,6 +1624,10 @@ header#main > .parallax-container > .parallax > video#background-video {
   padding: 32px 32px 0;
   margin-bottom: 8px;
   height: 182px;
+
+  background-image: url('../img/card-bg-soft.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .sidenav .user-view .circle,
